--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/solid-js": "^4.4.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.15.4",
+    "firebase": "^10.14.0",
+    "solid-js": "^1.9.1",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
   }
